--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-redux-wrapper": "^7.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
@@ -46,14 +47,14 @@
     "webpack-dev-middleware": "^5.1.0"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.25.1",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "@typescript-eslint/parser": "^4.31.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
